--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a Workshop about Protractor",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist && rm -rf reports",
     "build": "npm run clean && tsc",
     "test:local": "npm run build && protractor dist/protractor/local.config.js",
     "test:headless": "npm run lint && npm run build && protractor dist/protractor/headless.config.js",
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^16.11.4",
+    "jasmine-awesome-report": "^0.1.0",
     "protractor": "^7.0.0",
     "typescript": "^4.4.4"
   },
